# fungidb-orthologs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
fungidb_orthologs/: __init__.py  api.py  cli.py  client.py  config.py  genome_parser.py  genomes.py  service.py
tests/: test_genomes.py  test_orthologs.py
